# k1lgor-mega-mind-skills

./: .gitignore  CHANGELOG.md  README.md  USAGE.md  pyproject.toml
.agent/: AGENTS.md
.agent/shared/: VERIFICATION-GATE.md
.agent/skills/brainstorming/: SKILL.md
.agent/skills/bug-hunter/: SKILL.md
.agent/skills/data-analyst/: SKILL.md
.agent/skills/debugging/: SKILL.md
.agent/skills/doc-writer/: SKILL.md
.agent/skills/docker-expert/: SKILL.md
.agent/skills/e2e-test-specialist/: SKILL.md
.agent/skills/executing-plans/: SKILL.md
.agent/skills/finishing-a-development-branch/: SKILL.md
.agent/skills/frontend-architect/: SKILL.md
.agent/skills/k8s-orchestrator/: SKILL.md
.agent/skills/legacy-archaeologist/: SKILL.md
.agent/skills/mega-mind/: SKILL.md
.agent/skills/mobile-architect/: SKILL.md
.agent/skills/product-manager/: SKILL.md
.agent/skills/receiving-code-review/: SKILL.md
.agent/skills/rtk/: SKILL.md
.agent/skills/skill-generator/: SKILL.md
.agent/skills/systematic-debugging/: SKILL.md
.agent/skills/tech-lead/: SKILL.md
.agent/skills/test-genius/: SKILL.md
.agent/skills/using-mega-mind/: SKILL.md
.agent/skills/ux-designer/: SKILL.md
.agent/skills/workflow-orchestrator/: SKILL.md
.agent/skills/writing-plans/: SKILL.md
.agent/skills/writing-skills/: SKILL.md
.agent/tests/: run-tests.sh
.agent/workflows/: debug.md  high-complexity-dev.md  ship.md
.github/workflows/: publish.yml
src/mega_mind/: __init__.py  cli.py  installer.py
src/mega_mind/assets/: AGENTS.md
src/mega_mind/assets/agents/: architect.md  (+5 more)
(+69 files in other folders)
