[project]
name = "mega-mind-orchestrator"
version = "0.3.2"
description = "A powerful AI orchestrator and skill system for Antigravity, featuring 40+ specialized domain expert skills, disciplined development workflows, and RTK token optimization."
authors = [
    { name = "Plamen Ivanov", email = "paco.iwanow@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
mega-mind-orchestrator = "mega_mind.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mega_mind"]
